@@ -239,7 +239,7 @@ func TestNewErrChargerS(t *testing.T) {
 }
 
 func TestNewSTIRError(t *testing.T) {
-	expected := `*stir_authorize: wrong header`
+	expected := `*stir_authenticate: wrong header`
 	if rcv := NewSTIRError("wrong header"); rcv.Error() != expected {
 		t.Errorf("Expecting: %q, received: %q", expected, rcv.Error())
 	}
